Text of framerate and profile glitch in Multitexture shading #43218

Closed
opened 2015-01-12 09:51:35 +01:00 by Medvedev A · 8 comments

System Information
Windows XP SP3, Windows 7 and GMA 4500MD

Blender Version
Broken: 2.73 and below
Worked: 2.49b

Files:reflection_glitch.blend.reflection_glitch.png

In Multitexture shading mode glitch display text information, when using reflection texture. In GLSL mode work normal.

Exact steps for others to reproduce the error

  1. Open file eflection_glitch.blend.
  2. Turn on Show framerate and profile
  3. Press P start game engine
  4. In left corner display giltch text
**System Information** Windows XP SP3, Windows 7 and GMA 4500MD **Blender Version** Broken: 2.73 and below Worked: 2.49b **Files:**[reflection_glitch.blend](https://archive.blender.org/developer/F136742/reflection_glitch.blend).![reflection_glitch.png](https://archive.blender.org/developer/F136743/reflection_glitch.png) In Multitexture shading mode **glitch** display text information, when using reflection texture. In GLSL mode work **normal**. **Exact steps for others to reproduce the error** 1. Open file eflection_glitch.blend. 2. Turn on Show framerate and profile 3. Press P start game engine 4. In left corner display giltch text
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @medved

Added subscriber: @medved
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the bug

I confirm the bug

Added subscriber: @you.le

Added subscriber: @you.le

Hello! I made a fix for this: https://developer.blender.org/T46342 ... I think I've posted it in the wrtong section. Sorry

Hello! I made a fix for this: https://developer.blender.org/T46342 ... I think I've posted it in the wrtong section. Sorry

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by b2f57190d9

This issue was referenced by b2f57190d9f2cc3ece678ef788b42eefb5631a2e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43218
No description provided.